@@ -4,9 +4,9 @@ OVERVIEW
 
   It is compatible with the following versions of ocaml:
     3.08.0, 3.08.1, 3.08.2, 3.08.3, 3.08.4, 3.09.0, 3.09.1, 3.09.2, 3.09.3,
-    3.09.4, 3.10, 3.10.0, 3.10.1, 3.10.2, 3.10.3, 3.11.
+    3.09.4, 3.10, 3.10.0, 3.10.1, 3.10.2, 3.10.3, 3.11, 3.11.0.
 
-  This Camlp5 version is 5.09.
+  This Camlp5 version is 5.10.
 
   Camlp5 must be compiler either in "transitional mode" or in "strict mode".
   See the file MODE for information.
